package com.smile.decorate;

/**
 * @author smi1e
 * Date 2019/8/19 15:42
 * Description
 */
public interface Coffee {
    String getDesc();
    float getCost();
}
